--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <nav>
         <ul class="nav-links">
+            <li><a href="#">About</a></li>
             <li><a href="#">Features</a></li>
+            <li><a href="#">Blog</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
